returning total count as well with grouped by asserts