@@ -1,5 +1,6 @@
 package io.getarrays.securecapita.asserts.service;
 
+import io.getarrays.securecapita.asserts.dto.AssertsResponseDto;
 import io.getarrays.securecapita.asserts.dto.StationAssertsDto;
 import io.getarrays.securecapita.asserts.model.AssertEntity;
 import io.getarrays.securecapita.asserts.model.Inspection;
@@ -263,7 +264,7 @@ public class AssertService implements AssertServiceInterface {
 
 //is this correct what needs to be corrected
 @Override
-public List<StationAssertsDto> getAllAssertsOfUserGroupedByStation(UserDTO currentUser, Boolean movable) {
+public AssertsResponseDto getAllAssertsOfUserGroupedByStation(UserDTO currentUser, Boolean movable) {
     final List<AssertEntity> assertEntities = assertEntityRepository.findUserAsserts(currentUser.getId(), movable);
     return groupByAssertsByStation(assertEntities);
 }
@@ -451,29 +452,26 @@ public List<AssertEntity>getAssertEntityData(SpecificationInput specificationInp
     }
 
     @Override
-    public List<StationAssertsDto> getAllAssertsGroupedByStation(Boolean movable) {
+    public AssertsResponseDto getAllAssertsGroupedByStation(Boolean movable) {
         final List<AssertEntity> assertEntities = assertEntityRepository.findByMoveable(movable);
         return groupByAssertsByStation(assertEntities);
     }
 
-    private List<StationAssertsDto> groupByAssertsByStation(List<AssertEntity> assertEntities){
-        if (assertEntities == null || assertEntities.isEmpty()) {
-            // Return an empty list if no asserts are found
-            return Collections.emptyList();
-        }
+    private AssertsResponseDto groupByAssertsByStation(List<AssertEntity> assertEntities){
         // Group asserts by station ID, filtering out entities with null Station
         final Map<Long, List<AssertEntity>> groupedByStation = assertEntities.stream()
                 .filter(entity -> entity.getStation() != null) // Exclude entities without a Station
                 .collect(Collectors.groupingBy(entity -> entity.getStation().getStation_id()));
 
-        return groupedByStation.entrySet().stream()
+        List<StationAssertsDto> stationWiseAsserts =  groupedByStation.entrySet().stream()
                 .map(entry -> {
                     final Long stationId = entry.getKey();
                     final List<AssertEntity> asserts = entry.getValue();
                     final String stationName = asserts.get(0).getStation().getStationName();
                     return new StationAssertsDto(stationId, stationName, asserts.size(), asserts);
                 })
-                .collect(Collectors.toList());
+                .toList();
+        return new AssertsResponseDto(assertEntities.size(), stationWiseAsserts);
     }
 
     @Override
